--- a/src/audacity.desktop.in
+++ b/src/audacity.desktop.in
@@ -1,14 +1,13 @@
 [Desktop Entry]
 Name=Audacity
-Name[de]=Audacity
-Name[ru]=Audacity
-Name[uk]=Audacity
 GenericName=Sound Editor
 GenericName[de]=Audio-Editor
+GenericName[fr]=Éditeur audio
 GenericName[ru]=Редактор звуковых файлов
 GenericName[uk]=Редактор звукових файлів
 Comment=Record and edit audio files
 Comment[de]=Audio-Dateien aufnehmen und bearbeiten
+Comment[fr]=Enregistrer et éditer des fichiers audio
 Comment[ru]=Запись и редактирование звуковых файлов
 Comment[uk]=Запис і редагування звукових файлів
 
