--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1795,6 +1795,9 @@
     <ClInclude Include="..\..\..\src\widgets\wxPanelWrapper.h">
       <Filter>src\widgets</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\src\import\ImportForwards.h">
+      <Filter>src\import</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\audacity.ico">
