cross-compile: various
- search for wx-config using AC_PATH_TOOL
- conditionally include certain win32 source files
- add support for compiling .rc files
- use std=gnu++11 if available, otherwise c++11
- use ax_cv_c_compiler_vendor instead of ax_cv_cxx_compiler_vendor since AX_COMPILER_VENDOR won't define it
- configuration check for wxMSWDisableSettingHighDPIAware()
- add --enable-openmp, default disabled
- various cleanup in configure.ac

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -49,7 +49,6 @@ libaudacity_la_SOURCES = \
 	$(NULL)
 
 audacity_CPPFLAGS = \
-	-std=c++11 \
 	-Wno-deprecated-declarations \
 	-D__STDC_CONSTANT_MACROS \
 	-DLIBDIR=\"$(libdir)\" \
@@ -81,7 +80,12 @@ audacity_CPPFLAGS = \
 audacity_CXXFLAGS = \
    -Wno-unused-local-typedefs
 
+if TARGET_WIN32
+audacity_LDFLAGS =
+else
 audacity_LDFLAGS = -rdynamic
+endif
+
 audacity_LDADD = \
 	$(EXPAT_LIBS) \
 	$(FILEDIALOG_LIBS) \
@@ -837,9 +841,21 @@ audacity_SOURCES += \
 	effects/VST/aeffectx.h \
 	effects/VST/VSTEffect.cpp \
 	effects/VST/VSTEffect.h \
+	$(NULL)
+
+if TARGET_WIN32
+audacity_SOURCES += \
+	effects/VST/VSTControlMSW.cpp \
+	effects/VST/VSTControlMSW.h \
+	../win/audacity.rc \
+	$(NULL)
+else
+audacity_SOURCES += \
 	effects/VST/VSTControlGTK.cpp \
 	effects/VST/VSTControlGTK.h \
 	$(NULL)
+endif
+
 endif
 
 # TODO: Check *.cpp and *.h files if they are needed.
@@ -851,3 +867,8 @@ EXTRA_DIST = audacity.desktop.in xml/audacityproject.dtd \
 	effects/ScoreAlignDialog.cpp \
 	effects/ScoreAlignDialog.h \
 	$(NULL)
+
+# rule to compile resource files
+.rc.o:
+	$(RC) --include-dir=. $< -o $@
+
