clicktrack.ny -> rhythmtrack.ny on windows too

--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -711,7 +711,7 @@
   <ItemGroup>
     <copy Include="..\..\..\plug-ins\adjustable-fade.ny" />
     <copy Include="..\..\..\plug-ins\beat.ny" />
-    <copy Include="..\..\..\plug-ins\clicktrack.ny" />
+    <copy Include="..\..\..\plug-ins\rhythmtrack.ny" />
     <copy Include="..\..\..\plug-ins\clipfix.ny" />
     <copy Include="..\..\..\plug-ins\crossfadeclips.ny" />
     <copy Include="..\..\..\plug-ins\crossfadetracks.ny" />
@@ -1023,7 +1023,9 @@
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\$(IntDir)\Nyquist\%(Filename)%(Extension)</Outputs>
       <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\..\$(IntDir)\Nyquist\%(Filename)%(Extension)</Outputs>
     </CustomBuild>
-    <None Include="..\..\ny.rules" />
+    <None Include="..\..\ny.rules">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="..\..\po.rules" />
   </ItemGroup>
   <ItemGroup>
