--- a/win/Projects/Audacity/Audacity.vcxproj.filters
+++ b/win/Projects/Audacity/Audacity.vcxproj.filters
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
     <Filter Include="src">
@@ -886,6 +886,9 @@
     </ClCompile>
     <ClCompile Include="..\..\..\src\widgets\wxPanelWrapper.cpp">
       <Filter>src\widgets</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\src\AudacityException.cpp">
+      <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1800,6 +1803,9 @@
     </ClInclude>
     <ClInclude Include="..\..\..\src\commands\CommandFlag.h">
       <Filter>src\commands</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\src\AudacityException.h">
+      <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
