--- a/win/Projects/Audacity/Audacity.vcxproj
+++ b/win/Projects/Audacity/Audacity.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="..\..\..\src\Envelope.cpp" />
     <ClCompile Include="..\..\..\src\FFmpeg.cpp" />
     <ClCompile Include="..\..\..\src\FFT.cpp" />
+    <ClCompile Include="..\..\..\src\FileException.cpp" />
     <ClCompile Include="..\..\..\src\FileFormats.cpp" />
     <ClCompile Include="..\..\..\src\FileIO.cpp" />
     <ClCompile Include="..\..\..\src\FileNames.cpp" />
@@ -435,6 +436,7 @@
     <ClInclude Include="..\..\..\src\effects\NoiseReduction.h" />
     <ClInclude Include="..\..\..\src\effects\Phaser.h" />
     <ClInclude Include="..\..\..\src\effects\VST\VSTControlMSW.h" />
+    <ClInclude Include="..\..\..\src\FileException.h" />
     <ClInclude Include="..\..\..\src\import\FormatClassifier.h" />
     <ClInclude Include="..\..\..\src\import\ImportForwards.h" />
     <ClInclude Include="..\..\..\src\import\ImportGStreamer.h" />
