Define an AudacityException subclass for assertion violations

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -146,6 +146,8 @@ audacity_SOURCES = \
 	HistoryWindow.h \
 	ImageManipulation.cpp \
 	ImageManipulation.h \
+	InconsistencyException.cpp \
+	InconsistencyException.h \
 	InterpolateAudio.cpp \
 	InterpolateAudio.h \
 	LabelDialog.cpp \
